fix spacing on messages

--- a/src/index.scss
+++ b/src/index.scss
@@ -433,7 +433,6 @@ a {
       color: $black;
       font-size: 14px;
       font-family: "Helvetica Neue", sans-serif;
-      margin-left: 25px;
     }
   }
 }
@@ -764,7 +763,7 @@ hr {
 
 .avatar-icon {
   display: inline-block;
-  padding: 5px 5px 5px 0;
+  padding: 5px;
   width: 40px;
 }
 
